# SmartLinkForDrCOM-

./: CMakeLists.txt  CMakeUserPresets.json  README.md  SmartLinkForDrCOM.desktop
src/: CMakeLists.txt  SmartLinkForDrCOM.cpp  SmartLinkForDrCOM.h  SmartLinkForDrCOM.qrc  SmartLinkForDrCOM.ui  main.cpp  ssl_test.cpp.bak
src/core/: AccountManager.cpp  KeepLiveManager.cpp  KeepLiveManager.h  LoginManager.cpp  LoginManager.h  NetworkDetector.cpp  NetworkDetector.h  SystemTrayManager.h
src/entity/: JsonReturnEntity.h  LoginDataEntity.h  UserEntity.h  logDataEntity.h
src/models/: ConfigHelper.cpp  ConfigHelper.h  DataMaid.cpp  DataMaid.h
src/mould/: Singleton.h
